fix: img undefined

--- a/src/blocks/modules/team/team.pug
+++ b/src/blocks/modules/team/team.pug
@@ -1,6 +1,6 @@
 mixin foto-item(src, alt)
   li
-    +picture(src, alt).team__item
+    +picture-jpg(src, alt, true).team__item
 
 section#team.team.page__container
   +picture-png('./img/team/team', 'Рука художника с кисточками').team__image
