--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -1,22 +1,18 @@
 mixin img(src, alt)
   img(src=src alt=alt loading='lazy')&attributes(attributes)
 
-mixin picture(src, alt)
+mixin picture(src, alt, ext, noMobile)
   picture
-    source(srcset=src + '.webp' type='image/webp')
-    img(src=src + '.jpg' alt=alt loading='lazy')&attributes(attributes)
-
-mixin picture-size(src, alt, ext)
-  picture
-    source(srcset=src + '-mobile.webp' type='image/webp' media='(max-width: 520px)')
+    if !noMobile
+      source(srcset=src + '-mobile.webp' type='image/webp' media='(max-width: 520px)')
     source(srcset=src + '.webp' type='image/webp')
     img(src=src + ext alt=alt loading='lazy')&attributes(attributes)
 
-mixin picture-jpg(src, alt)
-  +picture-size(src, alt, '.jpg')&attributes(attributes)
+mixin picture-jpg(src, alt, noMobile)
+  +picture(src, alt, '.jpg', noMobile)&attributes(attributes)
 
-mixin picture-png(src, alt)
-  +picture-size(src, alt, '.png')&attributes(attributes)
+mixin picture-png(src, alt, noMobile)
+  +picture(src, alt, '.png', noMobile)&attributes(attributes)
 
 mixin svg(name)
   svg(data-svg=name)&attributes(attributes)
@@ -35,7 +31,7 @@ mixin tab(title)
 
 mixin card(src, author, title, material, price)
   article.card
-    +picture-size(src, title).card__image
+    +picture-jpg(src, title).card__image
     div.card__info
       p.card__author= author
       h3.card__title= title
