fix: data attribute

--- a/src/blocks/modules/catalog/catalog.pug
+++ b/src/blocks/modules/catalog/catalog.pug
@@ -3,11 +3,11 @@ section#catalog.catalog.page__container
     h2.catalog__title Репродукции
     ul.catalog__tabs
       li
-        +tab('Франция')(data='france').catalog__tab.button_tab_active
+        +tab('Франция')(data-tab='france').catalog__tab.button_tab_active
       li
-        +tab('Германия')(data='germany').catalog__tab
+        +tab('Германия')(data-tab='germany').catalog__tab
       li
-        +tab('Англия')(data='england').catalog__tab
+        +tab('Англия')(data-tab='england').catalog__tab
 
   ul.catalog__cards.catalog__france.catalog__cards_active
     li
