--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -66,6 +66,10 @@
   .header {
     background-color: transparent;
 
+    &__container {
+      margin-bottom: 0;
+    }
+
     &__nav {
       display: none;
     }
