--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -3,7 +3,7 @@ section#intro.intro.page__container
   div.intro__container
     h1.intro__title
       | Реплики картин
-      | от&nbsp;#[span.intro__title.intro__title_accent Ink. House]
+      | от&nbsp;#[span.intro__accent Ink. House]
     p.intro__text
       | Высокое качество отрисовки на&nbsp;плотной бумаге или льняном холсте.
       | Редкие произведения, доступные цены.
