--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   div.header__container.page__container.page__container_type_header
-    include ../../components/logo/logo
+    +logo
     nav.header__nav
       ul.header__links
         li.nav
