--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -3,6 +3,7 @@
 @import "header/header";
 @import "content/content";
 @import "footer/footer";
+@import "menu/menu";
 @import "intro/intro";
 @import "catalog/catalog";
 @import "promo/promo";
