--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -12,6 +12,6 @@ header.header
       +svg-link('shopping-cart', '#', 'Корзина')
 
   div.header__burger.page__container.page__container_type_header
-    button.button.button_icon(type='button' aria-label='Открыть меню' aria-expanded='false')
+    button.button.button_icon.button__open-menu(type='button' aria-label='Открыть меню' aria-expanded='false')
       +svg('burger').button__svg
     +svg-link('shopping-cart', '#', 'Корзина')
