--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -4,7 +4,7 @@ footer.footer
     +logo.footer__logo
 
     div.footer__column.footer__column_content_info
-      p.footer__link.footer__link_phone +7 (999) 543-54-54
+      +nav('+7 (999) 543-54-54', 'tel:+7(999)543-54-54').footer__link.footer__link_phone
       h3.footer__link Мастерская
 
     div.footer__column.footer__column_content_catalog
