future: start modal image viewer

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -6,6 +6,7 @@ $background-main: #fff;
 $background-section: #e1ede6;
 $blur: #0d2b43;
 $blur-light: #c3d1c6;
+$overlay:  rgb(225, 237, 230, .8);
 
 // grayscale colors
 $text-main: #2c2d35;
