--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -25,7 +25,9 @@ html(lang="ru")
     link(rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png")
     link(rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png")
     link(rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/panzoom/panzoom.css")
     link(rel="stylesheet" href="styles/main.css")
+    script(src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/panzoom/panzoom.umd.js")
   body.root
     div.page
       include ../../blocks/modules/header/header
@@ -33,5 +35,6 @@ html(lang="ru")
         block content
       include ../../blocks/modules/footer/footer
       include ../../blocks/modules/menu/menu
+      include ../../blocks/modules/modal/modal
   script(src="js/main.js")
   block scripts
