--- a/src/blocks/components/button/button.scss
+++ b/src/blocks/components/button/button.scss
@@ -110,6 +110,11 @@
       fill: $base-active;
       background-color: $base-light;
     }
+
+    &:disabled {
+      opacity: .5;
+      pointer-events: none;
+    }
   }
 
   &__svg {
