--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -19,9 +19,37 @@
   }
 
   &__container {
-    width: 100%;
-    max-width: 1000px;
-    background: transparent;
+    width: fit-content;
+    max-width: 100vw;
+    max-height: 80vh;
+    background-color: $background-section;
+  }
+
+  &__buttons {
+    z-index: 2;
+    position: absolute;
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 4px;
+    background-color: $background-section;
+
+    &_top {
+      right: 16px;
+      top: 16px;
+    }
+
+    &_bottom {
+      right: 16px;
+      bottom: 16px;
+    }
+  }
+
+  &__fullscreen {
+    display: flex;
+  }
+
+  &__fullscreen-exit {
+    display: none;
   }
 
   &__img {
@@ -29,4 +57,12 @@
     object-fit: contain;
     background-color: transparent;
   }
+}
+
+.in-fullscreen .modal__fullscreen {
+  display: none;
+}
+
+.in-fullscreen .modal__fullscreen-exit {
+  display: flex;
 }
