--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -38,7 +38,7 @@ mixin card(src, author, title, material, price)
     picture.card__overlay
       source(srcset=src + '-mobile.webp' type='image/webp' media='(max-width: 520px)')
       source(srcset=src + '.webp' type='image/webp')
-      img(src=src + '.jpg' alt=title loading='lazy').card__image
+      img(src=src + '.jpg' alt=title loading='lazy' data-big-src=src + '-big.webp').card__image
     div.card__info
       p.card__author= author
       h3.card__title= title
